--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,21 +6,24 @@
     <title>방명록 확인</title>
   </head>
   <body>
-    <h2>상우 바보</h2>
-    <h3>방명록 남기기</h3>
+    <h2>희원이의 생일파리 초대장</h2>
+    <section>
+      <p>6월 4일은 히원이의 생일입니다. 축하해주세요!</p>
+      <img src="/public/img/heew1.png" alt="heew_0_1" width="150" />
+    </section>
+    <section>
+      <p>장소:</p>
+      <p>날짜:</p>
+      <p>준비물:</p>
+    </section>
+    <section></section>
+    <h3>축하 메세지 남기기</h3>
     <form name="comment-form" style="display: flex; flex-direction: column; width: 500px">
-      <input type="text" placeholder="이름 등록" id="nickname" />
+      <input type="text" placeholder="이름🎂" id="nickname" />
       <br />
-      <textarea id="content" cols="30" rows="10" placeholder="방명록을 남겨주세용"></textarea>
+      <textarea id="content" cols="30" rows="10" placeholder="히원이에게 한마디"></textarea>
     </form>
-    <p>진짜 등록은 나중에 집가서 심심할 때 만들어볼게,,</p>
-
-    <p>예제</p>
-    <ul>
-      <li>닉네임: allie</li>
-      <li>방명록: 집에 가고 싶다.</li>
-      <li>등록날짜: 2024-02-29</li>
-    </ul>
+    <p>~~~ 축하메세지 기능 아직 안됨 ~~~</p>
 
     <%for(let el of data){%>
     <ul>
@@ -29,5 +32,8 @@
       <li>등록날짜 <%=el.registered_date%></li>
     </ul>
     <% } %>
+
+    <div>예정: d-day, 히원이의 생일까지 ~일 ~ 분 남았어요!</div>
+    <div>예정: 달력 import</div>
   </body>
 </html>
