--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,39 +1,75 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>방명록 확인</title>
-  </head>
-  <body>
-    <h2>희원이의 생일파리 초대장</h2>
-    <section>
-      <p>6월 4일은 히원이의 생일입니다. 축하해주세요!</p>
-      <img src="/public/img/heew1.png" alt="heew_0_1" width="150" />
-    </section>
-    <section>
-      <p>장소:</p>
-      <p>날짜:</p>
-      <p>준비물:</p>
-    </section>
-    <section></section>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>방명록 확인</title>
+
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script defer src="/public/js/main.js"></script>
+  <link rel="stylesheet" href="/public/css/main.css">
+</head>
+
+<body>
+  <header> D- day</header>
+  <h2>희원이의 생일파리 초대장</h2>
+  <section>
+    <p>6월 4일은 히원이의 생일입니다. 축하해주세요!</p>
+    <img src="/public/img/heew1.png" alt="heew_0_1" width="150" />
+  </section>
+  <section>
+    <p>장소:</p>
+    <p>날짜:</p>
+    <p>준비물:</p>
+  </section>
+  <section>
+
     <h3>축하 메세지 남기기</h3>
-    <form name="comment-form" style="display: flex; flex-direction: column; width: 500px">
+    <form name="comment-form">
       <input type="text" placeholder="이름🎂" id="nickname" />
       <br />
-      <textarea id="content" cols="30" rows="10" placeholder="히원이에게 한마디"></textarea>
+      <textarea id="content" placeholder="히원이에게 축하 한마디 : >"></textarea>
+      <button type="button" onclick="postComment()">메세지 등록 ~❤️</button>
     </form>
-    <p>~~~ 축하메세지 기능 아직 안됨 ~~~</p>
+
+    <div>예정: d-day, 히원이의 생일까지 ~일 ~ 분 남았어요!</div>
+    <div>예정: 달력 import</div>
+  </section>
+
+
+  <section class="comments-list">
 
     <%for(let el of data){%>
     <ul>
-      <li>닉네임 <%=el.nickName%></li>
-      <li>방명록 내용 <%=el.comment_content%></li>
+      <li><span>편지 쓴 사람 🌞</span><%=el.nickName%> </li>
+      <li> <%=el.comment_content%></li>
       <li>등록날짜 <%=el.registered_date%></li>
     </ul>
     <% } %>
 
-    <div>예정: d-day, 히원이의 생일까지 ~일 ~ 분 남았어요!</div>
-    <div>예정: 달력 import</div>
-  </body>
+  </section>
+
+  <footer>
+    희원이의 한 마디: 생일 축하해줘서 고마워 ^_^
+    <br>
+    만든이 j_jiinyo
+  </footer>
+  <script>
+    async function postComment() {
+      const form = document.forms['comment-form']
+      const response = await axios({
+        url: '/registerComment',
+        method: 'post',
+        data: {
+          nickname: form.nickname.value,
+          content: form.content.value
+        }
+      })
+
+      console.log(response.data)
+    }
+  </script>
+</body>
+
 </html>
