--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,8 +33,7 @@
       <button type="button" onclick="postComment()">메세지 등록 ~❤️</button>
     </form>
 
-    <div>예정: d-day, 히원이의 생일까지 ~일 ~ 분 남았어요!</div>
-    <div>예정: 달력 import</div>
+
   </section>
 
 
@@ -49,7 +48,12 @@
     <% } %>
 
   </section>
+  <p>
+    1. 새로고침하면 등록됨
+    2. 새로고침안돼도 등록되도록 >> ~0307까지 하겠음..
+    예정: 달력 import
 
+  </p>
   <footer>
     희원이의 한 마디: 생일 축하해줘서 고마워 ^_^
     <br>
