--- a/static/css/main.css
+++ b/static/css/main.css
@@ -83,8 +83,8 @@ footer {
     /* width: 500px;
    */
 
-    width: 200px;
+    width: 350px;
     max-width: 500px;
-    background-color: red;
+    /* background-color: red; */
   }
 }
